--- a/ML_IDS/Final_IDS.ipynb
+++ b/ML_IDS/Final_IDS.ipynb
@@ -16,7 +16,7 @@
     "from sklearn.ensemble import StackingClassifier\n",
     "\n",
     "#Load dataset\n",
-    "dataset1 = pd.read_csv(\"labelled1latest.csv\")\n",
+    "dataset1 = pd.read_csv(\"labelled1.csv\")\n",
     "\n",
     "features = dataset1.columns.tolist()\n",
     "features.remove('timestamp'), features.remove('class')\n",
